--- a/public/style.css
+++ b/public/style.css
@@ -187,6 +187,18 @@ label, input[type=submit] {
 #options select[multiple] option {
   padding: 0.5em;
 }
+#options .visual {
+  clear: both;
+}
+#options .visual label {
+  float: left;
+}
+#options .visual label:after {
+  content: ':';
+}
+#options .visual .color-container {
+  float: right;
+}
 
 /* Graph */
 #graph {
@@ -231,4 +243,20 @@ label, input[type=submit] {
   color: #8F8F8F;
   content: "@";
   text-decoration: none;
+}
+
+/* ColorPicker */
+div.color {
+	position: relative;
+	width: 36px;
+	height: 36px;
+	background: url(images/select.png);
+}
+div.color .colorsub {
+	position: absolute;
+	top: 3px;
+	left: 3px;
+	width: 30px;
+	height: 30px;
+	background: url(images/select.png) center;
 }
